Remedy issues with closing datasets, refactor several parts of code

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -34,7 +34,7 @@
     "from pyplume.constants import FIELD_NETCDF_DIR\n",
     "from pyplume.dataloaders import slice_dataset, dataset_to_fieldset\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.thredds_data import retrieve_dataset"
+    "from pyplume.thredds_data import retrieve_dataset, retrieve_dataloader"
    ]
   },
   {
@@ -174,29 +174,38 @@
    },
    "outputs": [],
    "source": [
+    "save_dir = utils.get_dir(FIELD_NETCDF_DIR)\n",
     "regions = []\n",
     "for rd in region_data:\n",
-    "    full = retrieve_dataset(rd[\"datasrc\"], rd[\"code\"])\n",
-    "    dataset = slice_dataset(\n",
-    "        full, rd[\"time_range\"], rd[\"lat_range\"],\n",
-    "        rd[\"lon_range\"], inclusive=rd[\"include_range_endpoints\"]\n",
-    "    )\n",
-    "    new_reg = {\"name\": rd[\"name\"], \"dataset\": dataset}\n",
-    "    regions.append(new_reg)\n",
-    "    print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")\n",
-    "    if rd.get(\"generate_mask\", False):\n",
-    "        # automatically generate a mask\n",
-    "        hours = (full[\"time\"].max() - full[\"time\"].min()) / np.timedelta64(1, \"h\")\n",
-    "        # 50 equal timesteps, should be a good enough sample to show coverage right?\n",
-    "        step = int(hours / 50)\n",
-    "        mask = slice_dataset(\n",
-    "            full, time_range=(full[\"time\"].min().values, full[\"time\"].max().values, step),\n",
-    "            lat_range=rd[\"lat_range\"], lon_range=rd[\"lon_range\"],\n",
-    "            inclusive=rd[\"include_range_endpoints\"]\n",
-    "        )\n",
-    "        new_reg = {\"name\": f\"{rd['name']}_mask\", \"dataset\": mask}\n",
-    "        regions.append(new_reg)\n",
-    "        print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")"
+    "    print(rd)\n",
+    "    with retrieve_dataloader(\n",
+    "        rd[\"datasrc\"], rd[\"code\"], time_range=rd[\"time_range\"], lat_range=rd[\"lat_range\"],\n",
+    "        lon_range=rd[\"lon_range\"], inclusive=rd[\"include_range_endpoints\"]\n",
+    "    ) as dl:\n",
+    "        dl.save(save_dir / f\"{rd['name']}.nc\")\n",
+    "        if rd.get(\"generate_mask\", False):\n",
+    "            dl.save_mask(save_dir / f\"{rd['name']}_mask.npy\", num_samples=50)\n",
+    "    # full = retrieve_dataset(rd[\"datasrc\"], rd[\"code\"])\n",
+    "    # dataset = slice_dataset(\n",
+    "    #     full, rd[\"time_range\"], rd[\"lat_range\"],\n",
+    "    #     rd[\"lon_range\"], inclusive=rd[\"include_range_endpoints\"]\n",
+    "    # )\n",
+    "    # new_reg = {\"name\": rd[\"name\"], \"dataset\": dataset}\n",
+    "    # regions.append(new_reg)\n",
+    "    # print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")\n",
+    "    # if rd.get(\"generate_mask\", False):\n",
+    "    #     # automatically generate a mask\n",
+    "    #     hours = (full[\"time\"].max() - full[\"time\"].min()) / np.timedelta64(1, \"h\")\n",
+    "    #     # 50 equal timesteps, should be a good enough sample to show coverage right?\n",
+    "    #     step = int(hours / 50)\n",
+    "    #     mask = slice_dataset(\n",
+    "    #         full, time_range=(full[\"time\"].min().values, full[\"time\"].max().values, step),\n",
+    "    #         lat_range=rd[\"lat_range\"], lon_range=rd[\"lon_range\"],\n",
+    "    #         inclusive=rd[\"include_range_endpoints\"]\n",
+    "    #     )\n",
+    "    #     new_reg = {\"name\": f\"{rd['name']}_mask\", \"dataset\": mask}\n",
+    "    #     regions.append(new_reg)\n",
+    "    #     print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")"
    ]
   },
   {
@@ -205,13 +214,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, r in enumerate(regions):\n",
-    "    save_dir = utils.get_dir(FIELD_NETCDF_DIR)\n",
-    "    filename = f\"{r['name']}.nc\"\n",
-    "    # save file\n",
-    "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
-    "    print(f\"saved to {save_dir / filename}\")\n",
-    "print(\"done\")"
+    "# for i, r in enumerate(regions):\n",
+    "#     save_dir = utils.get_dir(FIELD_NETCDF_DIR)\n",
+    "#     filename = f\"{r['name']}.nc\"\n",
+    "#     # save file\n",
+    "#     r[\"dataset\"].to_netcdf(save_dir / filename)\n",
+    "#     print(f\"saved to {save_dir / filename}\")\n",
+    "# print(\"done\")"
    ]
   }
  ],
