--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "from pyplume.constants import DATA_DIR, FIELD_NETCDF_DIR\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid, open_dataset\n",
+    "from pyplume.dataloaders import dataset_to_fieldset, SurfaceGrid\n",
     "from pyplume.thredds_data import rename_dataset_vars"
    ]
   },
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vel_ds = rename_dataset_vars(open_dataset(velocity_field_nc))\n",
+    "vel_ds = rename_dataset_vars(xr.open_dataset(velocity_field_nc))\n",
     "lats, lons = utils.load_pts_mat(coastline_mat)\n",
     "coastline = LineString(np.array([lats, lons]).T)"
    ]
@@ -278,16 +278,32 @@
    "outputs": [],
    "source": [
     "from pyplume.plotting import get_carree_axis, get_carree_gl\n",
+    "import cartopy\n",
+    "import cartopy.crs as ccrs\n",
     "\n",
+    "idx = 0\n",
+    "tstamp = vel_ds[\"time\"][0].values\n",
     "othermgrid = np.meshgrid(lats_grid, lons_grid, indexing=\"ij\")\n",
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.quiver(\n",
+    "us = coast_u[idx].flatten()\n",
+    "vs = coast_v[idx].flatten()\n",
+    "mags = np.sqrt(us ** 2 + vs ** 2)\n",
+    "fig = plt.figure(figsize=(10, 10))\n",
+    "ax = fig.add_subplot(111, projection=ccrs.PlateCarree())\n",
+    "ax.add_feature(cartopy.feature.COASTLINE)\n",
+    "quiv = ax.quiver(\n",
     "    othermgrid[1].flatten(),\n",
     "    othermgrid[0].flatten(),\n",
-    "    coast_u[0].flatten(),\n",
-    "    coast_v[0].flatten(),\n",
-    "    scale=5\n",
-    ")"
+    "    us,\n",
+    "    vs,\n",
+    "    mags,\n",
+    "    scale=6\n",
+    ")\n",
+    "get_carree_gl(ax)\n",
+    "cbar = fig.colorbar(quiv, shrink=0.6)\n",
+    "cbar.ax.get_yaxis().labelpad = 15\n",
+    "cbar.ax.set_ylabel(\"Alongshore current velocity (m/s)\", rotation=270)\n",
+    "ax.set_title(f\"Alongshore velocities on {tstamp}\")\n",
+    "fig.show()"
    ]
   },
   {
