--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -48,15 +48,6 @@
     "    time_now = np.datetime64(\"now\", \"h\")\n",
     "    return (time_now - delta, time_now)\n",
     "\n",
-    "\n",
-    "def get_time_slice(time_range):\n",
-    "    if len(time_range) == 2:\n",
-    "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]))\n",
-    "    if len(time_range) == 3:\n",
-    "        # step size is an integer in hours\n",
-    "        return slice(np.datetime64(time_range[0]), np.datetime64(time_range[1]), time_range[2])\n",
-    "    \n",
-    "\n",
     "def get_regs_year(year, name, lat_rng, lon_rng):\n",
     "    regions = []\n",
     "    months = np.arange(str(year), str(year + 1), dtype=\"datetime64[M]\")\n",
@@ -184,43 +175,7 @@
     "    ) as dl:\n",
     "        dl.save(save_dir / f\"{rd['name']}.nc\")\n",
     "        if rd.get(\"generate_mask\", False):\n",
-    "            dl.save_mask(save_dir / f\"{rd['name']}_mask.npy\", num_samples=50)\n",
-    "    # full = retrieve_dataset(rd[\"datasrc\"], rd[\"code\"])\n",
-    "    # dataset = slice_dataset(\n",
-    "    #     full, rd[\"time_range\"], rd[\"lat_range\"],\n",
-    "    #     rd[\"lon_range\"], inclusive=rd[\"include_range_endpoints\"]\n",
-    "    # )\n",
-    "    # new_reg = {\"name\": rd[\"name\"], \"dataset\": dataset}\n",
-    "    # regions.append(new_reg)\n",
-    "    # print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")\n",
-    "    # if rd.get(\"generate_mask\", False):\n",
-    "    #     # automatically generate a mask\n",
-    "    #     hours = (full[\"time\"].max() - full[\"time\"].min()) / np.timedelta64(1, \"h\")\n",
-    "    #     # 50 equal timesteps, should be a good enough sample to show coverage right?\n",
-    "    #     step = int(hours / 50)\n",
-    "    #     mask = slice_dataset(\n",
-    "    #         full, time_range=(full[\"time\"].min().values, full[\"time\"].max().values, step),\n",
-    "    #         lat_range=rd[\"lat_range\"], lon_range=rd[\"lon_range\"],\n",
-    "    #         inclusive=rd[\"include_range_endpoints\"]\n",
-    "    #     )\n",
-    "    #     new_reg = {\"name\": f\"{rd['name']}_mask\", \"dataset\": mask}\n",
-    "    #     regions.append(new_reg)\n",
-    "    #     print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i, r in enumerate(regions):\n",
-    "#     save_dir = utils.get_dir(FIELD_NETCDF_DIR)\n",
-    "#     filename = f\"{r['name']}.nc\"\n",
-    "#     # save file\n",
-    "#     r[\"dataset\"].to_netcdf(save_dir / filename)\n",
-    "#     print(f\"saved to {save_dir / filename}\")\n",
-    "# print(\"done\")"
+    "            dl.save_mask(save_dir / f\"{rd['name']}_mask.npy\", num_samples=50)"
    ]
   }
  ],
@@ -244,7 +199,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "92c0155ff973c51285fb1dc8e256afac5e3dbdefb05174b825f6699ebdf3a9c7"
+    "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
    }
   }
  },
