--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "from pyplume.constants import CONFIGS_DIR\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.config_parser import prep_sim_from_cfg, process_results"
+    "from pyplume.config_parser import load_config, prep_sim_from_cfg, process_results"
    ]
   },
   {
@@ -47,14 +47,9 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"plume_track.json\",\n",
-    "    # \"plume_track_alongshore.json\",\n",
-    "    \"plume_track_live.json\",\n",
-    "    \"mwb.json\",\n",
-    "    # \"tijuana_now.json\",\n",
-    "#     \"buoy_track_704_02.json\",\n",
-    "    \"hunington_all.json\",\n",
-    "#     \"dummy_sim.json\",\n",
+    "    \"tijuana_2020-03_overland.json\",\n",
+    "    \"tijuana_2020-03_slipmask.json\",\n",
+    "    \"tijuana_2020-03_alongshore.json\",\n",
     "]"
    ]
   },
@@ -66,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "loaded_configs = [utils.load_config(CONFIGS_DIR / path) for path in configs]\n",
+    "loaded_configs = [load_config(CONFIGS_DIR / path) for path in configs]\n",
     "sims = []\n",
     "for cfg in loaded_configs:\n",
     "    sims.append(prep_sim_from_cfg(cfg))"
@@ -154,7 +149,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "92c0155ff973c51285fb1dc8e256afac5e3dbdefb05174b825f6699ebdf3a9c7"
+    "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
    }
   }
  },
