Minor tweaks to get OI data loading again

--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -31,6 +31,7 @@
     "import scipy.io\n",
     "import xarray as xr\n",
     "\n",
+    "from pyplume.constants import DATA_DIR, FIELD_NETCDF_DIR\n",
     "import pyplume.utils as utils\n",
     "from pyplume.dataloaders import dataset_to_fieldset"
    ]
@@ -52,10 +53,9 @@
     "end_time = np.datetime64(\"2020-08-31T23:00\", \"m\")\n",
     "incr = np.timedelta64(1, \"h\")\n",
     "\n",
-    "coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid.mat\"\n",
-    "# coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid_new.mat\"\n",
+    "coord_grid_path = DATA_DIR / \"sdcodargrid_hfr.mat\"\n",
     "\n",
-    "mat_tot_dir = utils.MATLAB_DIR / \"support_data/TrackerOutput/hourly\""
+    "mat_tot_dir = DATA_DIR / \"support_data/TrackerOutput/hourly\""
    ]
   },
   {
@@ -83,7 +83,7 @@
     "    \"E\": -117\n",
     "}\n",
     "\n",
-    "lats, lons = utils.load_pts_mat(utils.MATLAB_DIR / \"coastline.mat\", \"latz0\", \"lonz0\")\n",
+    "lats, lons = utils.load_pts_mat(DATA_DIR / \"coastline.mat\", \"latz0\", \"lonz0\")\n",
     "coastline = np.array([lats, lons])\n",
     "# just filter out the problematic upper coastline where it goes up and down\n",
     "coastline = coastline[:, :288]"
@@ -161,8 +161,8 @@
     "                v_grid[0, j, i] = v[0, i * len(lats) + j] / 100\n",
     "    ds = xr.Dataset(\n",
     "        {\n",
-    "            \"u\": ([\"time\", \"lat\", \"lon\"], u_grid),\n",
-    "            \"v\": ([\"time\", \"lat\", \"lon\"], v_grid),\n",
+    "            \"U\": ([\"time\", \"lat\", \"lon\"], u_grid),\n",
+    "            \"V\": ([\"time\", \"lat\", \"lon\"], v_grid),\n",
     "        },\n",
     "        coords={\n",
     "            \"time\": time,\n",
@@ -223,20 +223,17 @@
    "outputs": [],
    "source": [
     "date_parsed, _ = parse_time(start_time)\n",
-    "saveto = utils.FILES_ROOT / f\"data/field_netcdfs/Tot_SDLJ_{date_parsed}.nc\"\n",
+    "saveto = FIELD_NETCDF_DIR / f\"oi_fields/Tot_SDLJ_202008.nc\"\n",
     "ds_total.to_netcdf(saveto)\n",
     "print(f\"saved to {saveto}\")"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
-  },
   "kernelspec": {
-   "display_name": "py3-parcels",
+   "display_name": "Python 3.7.10 ('py3-parcels')",
    "language": "python",
-   "name": "py3-parcels"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -249,6 +246,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
+   }
   }
  },
  "nbformat": 4,
