Run some preliminary Hurricane Kay simulations

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -101,42 +101,52 @@
     "# tuple reference\n",
     "# (name, region code, time range, lat range, lon range, include domain endpoints)\n",
     "region_data = [\n",
+    "    # {\n",
+    "    #     \"name\": \"tj_sample\",\n",
+    "    #     \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "    #     \"code\": \"USWC_1KM_HOURLY\",\n",
+    "    #     \"time_range\": (\"2019-01-01T00\", \"2021-01-01T00\", 300),\n",
+    "    #     \"lat_range\": (32.11093, 32.73124),\n",
+    "    #     \"lon_range\": (-117.565, -116.9924),\n",
+    "    #     \"include_range_endpoints\": False\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"hunington_latest\",\n",
+    "    #     \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "    #     \"code\": \"USWC_6KM_HOURLY\",\n",
+    "    #     \"time_range\": (\"2021-10-01T00\", \"2021-10-10T00\"),\n",
+    "    #     \"lat_range\": (32, 34.2),\n",
+    "    #     \"lon_range\": (-119, -117.4),\n",
+    "    #     \"include_range_endpoints\": True\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     \"name\": \"tj_plume_1km_2020-03\",\n",
+    "    #     \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "    #     \"code\": \"USWC_1KM_HOURLY\",\n",
+    "    #     \"time_range\": (\"2020-03-09T01:00\", \"2020-03-14T01:00\"),\n",
+    "    #     \"lat_range\": (32.11093, 32.73124),\n",
+    "    #     \"lon_range\": (-117.565, -116.9924),\n",
+    "    #     \"include_range_endpoints\": True,\n",
+    "    #     \"generate_mask\": True\n",
+    "    # },\n",
+    "    # {\n",
+    "    #   \"name\": \"hycom_mwbproj\",\n",
+    "    #   \"datasrc\": \"THREDDS_HYCOM\",\n",
+    "    #   \"code\": \"FMRC_HYCOM\",\n",
+    "    #   \"time_range\": (np.datetime64(\"now\") - np.timedelta64(1, \"D\"), np.datetime64(\"now\") + np.timedelta64(7, \"D\")),\n",
+    "    #   \"lat_range\": (22, 45),\n",
+    "    #   \"lon_range\": (273, 295),\n",
+    "    #   \"include_range_endpoints\": False\n",
+    "    # },\n",
     "    {\n",
-    "        \"name\": \"tj_sample\",\n",
-    "        \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "        \"code\": \"USWC_1KM_HOURLY\",\n",
-    "        \"time_range\": (\"2019-01-01T00\", \"2021-01-01T00\", 300),\n",
-    "        \"lat_range\": (32.11093, 32.73124),\n",
-    "        \"lon_range\": (-117.565, -116.9924),\n",
-    "        \"include_range_endpoints\": False\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"hunington_latest\",\n",
-    "        \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "        \"code\": \"USWC_6KM_HOURLY\",\n",
-    "        \"time_range\": (\"2021-10-01T00\", \"2021-10-10T00\"),\n",
-    "        \"lat_range\": (32, 34.2),\n",
-    "        \"lon_range\": (-119, -117.4),\n",
-    "        \"include_range_endpoints\": True\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"tj_plume_1km_2020-03\",\n",
-    "        \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
-    "        \"code\": \"USWC_1KM_HOURLY\",\n",
-    "        \"time_range\": (\"2020-03-09T01:00\", \"2020-03-14T01:00\"),\n",
-    "        \"lat_range\": (32.11093, 32.73124),\n",
-    "        \"lon_range\": (-117.565, -116.9924),\n",
-    "        \"include_range_endpoints\": True,\n",
-    "        \"generate_mask\": True\n",
-    "    },\n",
-    "    {\n",
-    "      \"name\": \"hycom_mwbproj\",\n",
-    "      \"datasrc\": \"THREDDS_HYCOM\",\n",
-    "      \"code\": \"FMRC_HYCOM\",\n",
-    "      \"time_range\": (np.datetime64(\"now\") - np.timedelta64(1, \"D\"), np.datetime64(\"now\") + np.timedelta64(7, \"D\")),\n",
-    "      \"lat_range\": (22, 45),\n",
-    "      \"lon_range\": (273, 295),\n",
-    "      \"include_range_endpoints\": False\n",
+    "      \"name\": \"tj_plume_1km_2022-09\",\n",
+    "      \"datasrc\": \"THREDDS_HFRNET_UCSD\",\n",
+    "      \"code\": \"USWC_1KM_HOURLY\",\n",
+    "      \"time_range\": (\"2022-09-01T00:00\", \"2022-09-30T23:00\"),\n",
+    "      \"lat_range\": (32.11093, 32.73124),\n",
+    "      \"lon_range\": (-117.565, -116.9924),\n",
+    "      \"include_range_endpoints\": True,\n",
+    "      \"generate_mask\": True\n",
     "    },\n",
     "    # stuff below here hasn't been updated with the new format\n",
     "#     (\"tj_plume\", \"USWC_1KM_HOURLY\", (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
