--- a/particle_density.ipynb
+++ b/particle_density.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset(\"results/simulation_tijuana_2020-03_alongshore_2022-09-26T14-31-57/particlefile.nc\")"
+    "ds = xr.open_dataset(\"results/simulation_tijuana_2022-09_alongshore_2022-10-12T14-11-39/particlefile.nc\")"
    ]
   },
   {
@@ -62,9 +62,11 @@
     "import seaborn as sns\n",
     "\n",
     "fig, ax = get_carree_axis(constants.TIJUANA_RIVER_DOMAIN, land=False)\n",
+    "fig.patch.set_facecolor(\"w\")\n",
     "get_carree_gl(ax)\n",
-    "axhist = sns.histplot(x=lons, y=lats, bins=100, cbar=True, ax=ax)\n",
-    "coastline.add_to_plot(fig, ax, None, None, None)"
+    "axhist = sns.histplot(x=lons, y=lats, bins=100, cbar=True, pmax=0.6, ax=ax)\n",
+    "coastline.add_to_plot(fig, ax, None, None, None)\n",
+    "plt.show()"
    ]
   },
   {
