--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# parcels regions\n",
+    "# simulation_runner\n",
     "\n",
     "runs parcels on existing netcdf files"
    ]
@@ -47,9 +47,10 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"tijuana_2020-03_overland.json\",\n",
-    "    \"tijuana_2020-03_slipmask.json\",\n",
-    "    \"tijuana_2020-03_alongshore.json\",\n",
+    "    # \"tijuana_2020-03_overland.json\",\n",
+    "    # \"tijuana_2020-03_slipmask.json\",\n",
+    "    # \"tijuana_2020-03_alongshore.json\",\n",
+    "    \"tijuana_2022-09_alongshore.yaml\"\n",
     "]"
    ]
   },
