Create particle density external plot animation

--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -49,8 +49,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_time = np.datetime64(\"2020-08-01T00:00\", \"m\")\n",
-    "end_time = np.datetime64(\"2020-08-31T23:00\", \"m\")\n",
+    "out_filename = \"Tot_SDLJ_202209.nc\"\n",
+    "\n",
+    "start_time = np.datetime64(\"2022-09-01T00:00\", \"m\")\n",
+    "end_time = np.datetime64(\"2022-09-30T23:00\", \"m\")\n",
     "incr = np.timedelta64(1, \"h\")\n",
     "\n",
     "coord_grid_path = DATA_DIR / \"sdcodargrid_hfr.mat\"\n",
@@ -222,8 +224,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ds_total[\"time\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "date_parsed, _ = parse_time(start_time)\n",
-    "saveto = FIELD_NETCDF_DIR / f\"oi_fields/Tot_SDLJ_202008.nc\"\n",
+    "saveto = FIELD_NETCDF_DIR / f\"oi_fields/{out_filename}\"\n",
     "ds_total.to_netcdf(saveto)\n",
     "print(f\"saved to {saveto}\")"
    ]
