Create new vector field plot method for specific visualizations

--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -40,8 +40,9 @@
     "import scipy.spatial\n",
     "\n",
     "import pyplume.utils as utils\n",
-    "from pyplume.dataloaders import get_file_info\n",
-    "from pyplume.plotting import get_carree_axis, get_carree_gl"
+    "from pyplume.dataloaders import DataLoader, dataset_to_fieldset\n",
+    "from pyplume.plotting import get_carree_axis, get_carree_gl\n",
+    "from pyplume.constants import FIELD_NETCDF_DIR"
    ]
   },
   {
@@ -50,13 +51,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = [\n",
-    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_2020-08_interped.nc\", 1, name=\"tj_plume\"),\n",
-    "    get_file_info(utils.CURRENT_NETCDF_DIR / \"Tot_SDLJ_20200801.nc\", 1, name=\"tot_sdlj\"),\n",
+    "filenames = [\n",
+    "    FIELD_NETCDF_DIR / \"tj_plume_1km_2022-09.nc\",\n",
+    "    FIELD_NETCDF_DIR / \"oi_fields/Tot_SDLJ_202209.nc\"\n",
     "]\n",
+    "\n",
+    "files = []\n",
+    "for fname in filenames:\n",
+    "    ds = DataLoader(fname).dataset\n",
+    "    fs = dataset_to_fieldset(ds)\n",
+    "    files.append({\"ds\": ds, \"fs\": fs})\n",
+    "\n",
+    "domain = {\n",
+    "    \"S\": 32.525,\n",
+    "    \"N\": 32.7,\n",
+    "    \"W\": -117.27,\n",
+    "    \"E\": -117.09\n",
+    "}\n",
     "\n",
     "# if lat and lon dimensions are the same, the stuff will run MUCH quicker\n",
     "dimensions_same = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files[0][\"ds\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(np.array([1,2,2]) == 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files[1][\"ds\"][\"time\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyplume.plotting import plot_vectorfield\n",
+    "from pyplume.constants import TIJUANA_RIVER_DOMAIN\n",
+    "\n",
+    "t = files[1][\"ds\"][\"time\"][4]\n",
+    "fig = plt.figure()\n",
+    "fig.patch.set_facecolor(\"w\")\n",
+    "fig.set_size_inches(12, 5)\n",
+    "fig.tight_layout()\n",
+    "plot_vectorfield(files[0][\"ds\"], show_time=t, vmin=0, vmax=1, fig=fig, pos=121, titlestr=\"Thredds\")\n",
+    "plot_vectorfield(files[1][\"ds\"], show_time=t, vmin=0, vmax=1, fig=fig, pos=122, titlestr=\"OI\")"
    ]
   },
   {
@@ -88,8 +147,8 @@
    "source": [
     "# set up kdtrees because im lazy\n",
     "for f in files:\n",
-    "    f[\"latkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lat\"]]).T)\n",
-    "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"lon\"]]).T)"
+    "    f[\"latkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"ds\"][\"lat\"]]).T)\n",
+    "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"ds\"][\"lon\"]]).T)"
    ]
   },
   {
@@ -101,13 +160,13 @@
    "outputs": [],
    "source": [
     "# kind of hardcoded\n",
-    "ang_diff = np.full(files[0][\"ds\"][\"u\"].shape, np.nan, dtype=np.float32)\n",
+    "ang_diff = np.full(files[0][\"ds\"][\"U\"].shape, np.nan, dtype=np.float32)\n",
     "mag_diff = np.full(ang_diff.shape, np.nan, dtype=np.float32)\n",
     "\n",
     "if not dimensions_same:\n",
     "    for t, i, j in np.ndindex(ang_diff.shape):\n",
     "        time = files[0][\"ds\"][\"time\"].values[t]\n",
-    "        u = files[0][\"ds\"][\"u\"].values[t, i, j]\n",
+    "        u = files[0][\"ds\"][\"U\"].values[t, i, j]\n",
     "        if np.isnan(u) or time not in files[1][\"ds\"][\"time\"]:\n",
     "            continue\n",
     "        # OI data is missing some time values\n",
@@ -122,9 +181,9 @@
     "    #     print(utils.haversine(lat, files[1][\"ds\"][\"lat\"].values[lat_ind], lon, files[1][\"ds\"][\"lon\"].values[lon_ind]))\n",
     "        if abs(lat - files[1][\"ds\"][\"lat\"].values[lat_ind]) > 0.00903 or abs(lon - files[1][\"ds\"][\"lon\"].values[lon_ind]) > 0.0107:\n",
     "            continue\n",
-    "        v = files[0][\"ds\"][\"v\"].values[t, i, j]\n",
-    "        u_other = files[1][\"ds\"][\"u\"].values[t_other, lat_ind, lon_ind]\n",
-    "        v_other = files[1][\"ds\"][\"v\"].values[t_other, lat_ind, lon_ind]\n",
+    "        v = files[0][\"ds\"][\"V\"].values[t, i, j]\n",
+    "        u_other = files[1][\"ds\"][\"U\"].values[t_other, lat_ind, lon_ind]\n",
+    "        v_other = files[1][\"ds\"][\"V\"].values[t_other, lat_ind, lon_ind]\n",
     "        mag = np.sqrt(u * u + v * v)\n",
     "        mag_other = np.sqrt(u_other * u_other + v_other * v_other)\n",
     "        dot_mag_rat = (u * u_other + v * v_other) / (mag * mag_other)\n",
@@ -138,19 +197,19 @@
     "        ang_diff[t, i, j] = ang\n",
     "        mag_diff[t, i, j] = abs(mag - mag_other)\n",
     "else:\n",
-    "    # runs mUCH MUCH quicker\n",
+    "    # runs significantly quicker (please use this)\n",
     "    for t in range(ang_diff.shape[0]):\n",
     "        time = files[0][\"ds\"][\"time\"].values[t]\n",
-    "        u = files[0][\"ds\"][\"u\"].values[t]\n",
-    "        v = files[0][\"ds\"][\"v\"].values[t]\n",
+    "        u = files[0][\"ds\"][\"U\"].values[t]\n",
+    "        v = files[0][\"ds\"][\"V\"].values[t]\n",
     "        t_other = np.where(files[1][\"ds\"][\"time\"].values == time)[0]\n",
     "        if t_other.size == 0:\n",
     "            print(f\"time {time} missing\")\n",
     "            continue\n",
     "        else:\n",
     "            t_other = t_other[0]\n",
-    "        u_other = files[1][\"ds\"][\"u\"].values[t_other]\n",
-    "        v_other = files[1][\"ds\"][\"v\"].values[t_other]\n",
+    "        u_other = files[1][\"ds\"][\"U\"].values[t_other]\n",
+    "        v_other = files[1][\"ds\"][\"V\"].values[t_other]\n",
     "        mag = np.sqrt(u * u + v * v)\n",
     "        mag_other = np.sqrt(u_other * u_other + v_other * v_other)\n",
     "        dot_mag_rat = (u * u_other + v * v_other) / (mag * mag_other)\n",
@@ -225,12 +284,10 @@
    "outputs": [],
    "source": [
     "lon, lat = np.meshgrid(files[0][\"ds\"][\"lon\"].values, files[0][\"ds\"][\"lat\"].values)\n",
-    "first_time = np.datetime64(files[0][\"timerng\"][0], \"M\")\n",
-    "deg_diff_dir = utils.get_dir(utils.PICUTRE_DIR / \"fs_comp_angle\")\n",
+    "first_time = np.datetime64(files[0][\"ds\"][\"time\"][0].values, \"M\")\n",
+    "deg_diff_dir = utils.get_dir(\"results/fs_comp_angle\")\n",
     "\n",
-    "dom = files[0][\"domain\"]\n",
-    "dom[\"S\"] = 32.3\n",
-    "ax = get_carree_axis(dom)\n",
+    "fig, ax = get_carree_axis(domain)\n",
     "gl = get_carree_gl(ax)\n",
     "plt.contourf(lon, lat, ang_means, np.linspace(0, np.nanmax(ang_means), 30), cmap='inferno')\n",
     "plt.title(f\"Avg vector degree diff ({first_time})\")\n",
@@ -245,9 +302,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deg_diff_dir = utils.get_dir(utils.PICUTRE_DIR / \"fs_comp_mag\")\n",
+    "deg_diff_dir = utils.get_dir(\"results/fs_comp_mag\")\n",
     "\n",
-    "ax = get_carree_axis(dom)\n",
+    "fig, ax = get_carree_axis(domain)\n",
     "gl = get_carree_gl(ax)\n",
     "plt.contourf(lon, lat, mag_means, np.linspace(0, np.nanmax(mag_means), 20), cmap='inferno')\n",
     "plt.title(f\"Avg magnitude diff (m/s) ({first_time})\")\n",
@@ -259,9 +316,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3-parcels",
+   "display_name": "Python 3.7.10 ('py3-parcels')",
    "language": "python",
-   "name": "py3-parcels"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -274,6 +331,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
+   }
   }
  },
  "nbformat": 4,
