--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -50,7 +50,8 @@
     "    # \"tijuana_2020-03_overland.json\",\n",
     "    # \"tijuana_2020-03_slipmask.json\",\n",
     "    # \"tijuana_2020-03_alongshore.json\",\n",
-    "    \"tijuana_2022-09_alongshore.yaml\"\n",
+    "    \"tijuana_2022-09_alongshore.yaml\",\n",
+    "    \"tijuana_2022-09_oi_alongshore.yaml\"\n",
     "]"
    ]
   },
