Save side-by-side fields for comparison

--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "import pyplume.utils as utils\n",
     "from pyplume.dataloaders import DataLoader, dataset_to_fieldset\n",
-    "from pyplume.plotting import get_carree_axis, get_carree_gl\n",
+    "from pyplume.plotting import get_carree_axis, get_carree_gl, plot_vectorfield\n",
     "from pyplume.constants import FIELD_NETCDF_DIR"
    ]
   },
@@ -74,51 +74,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files[0][\"ds\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(np.array([1,2,2]) == 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files[1][\"ds\"][\"time\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyplume.plotting import plot_vectorfield\n",
-    "from pyplume.constants import TIJUANA_RIVER_DOMAIN\n",
-    "\n",
-    "t = files[1][\"ds\"][\"time\"][4]\n",
-    "fig = plt.figure()\n",
-    "fig.patch.set_facecolor(\"w\")\n",
-    "fig.set_size_inches(12, 5)\n",
-    "fig.tight_layout()\n",
-    "plot_vectorfield(files[0][\"ds\"], show_time=t, vmin=0, vmax=1, fig=fig, pos=121, titlestr=\"Thredds\")\n",
-    "plot_vectorfield(files[1][\"ds\"], show_time=t, vmin=0, vmax=1, fig=fig, pos=122, titlestr=\"OI\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,20 +90,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_nearest_index(ref, lat, lon):\n",
-    "    return ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set up kdtrees because im lazy\n",
+    "# set up kd trees/methods in order to process fields that do not share the same coordinates\n",
     "for f in files:\n",
     "    f[\"latkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"ds\"][\"lat\"]]).T)\n",
-    "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"ds\"][\"lon\"]]).T)"
+    "    f[\"lonkdtree\"] = scipy.spatial.cKDTree(np.array([f[\"ds\"][\"lon\"]]).T)\n",
+    "\n",
+    "def get_nearest_index(ref, lat, lon):\n",
+    "    return ref[\"latkdtree\"].query([lat])[1], ref[\"lonkdtree\"].query([lon])[1]"
    ]
   },
   {
@@ -159,6 +107,8 @@
    },
    "outputs": [],
    "source": [
+    "overlap_times = np.intersect1d(files[0][\"ds\"][\"time\"], files[1][\"ds\"][\"time\"])\n",
+    "\n",
     "# kind of hardcoded\n",
     "ang_diff = np.full(files[0][\"ds\"][\"U\"].shape, np.nan, dtype=np.float32)\n",
     "mag_diff = np.full(ang_diff.shape, np.nan, dtype=np.float32)\n",
@@ -198,27 +148,38 @@
     "        mag_diff[t, i, j] = abs(mag - mag_other)\n",
     "else:\n",
     "    # runs significantly quicker (please use this)\n",
-    "    for t in range(ang_diff.shape[0]):\n",
-    "        time = files[0][\"ds\"][\"time\"].values[t]\n",
-    "        u = files[0][\"ds\"][\"U\"].values[t]\n",
-    "        v = files[0][\"ds\"][\"V\"].values[t]\n",
-    "        t_other = np.where(files[1][\"ds\"][\"time\"].values == time)[0]\n",
-    "        if t_other.size == 0:\n",
-    "            print(f\"time {time} missing\")\n",
-    "            continue\n",
-    "        else:\n",
-    "            t_other = t_other[0]\n",
-    "        u_other = files[1][\"ds\"][\"U\"].values[t_other]\n",
-    "        v_other = files[1][\"ds\"][\"V\"].values[t_other]\n",
-    "        mag = np.sqrt(u * u + v * v)\n",
-    "        mag_other = np.sqrt(u_other * u_other + v_other * v_other)\n",
-    "        dot_mag_rat = (u * u_other + v * v_other) / (mag * mag_other)\n",
+    "    u_shape = files[0][\"ds\"][\"U\"].shape\n",
+    "    ang_diff = np.full((len(overlap_times), u_shape[1], u_shape[2]), np.nan, dtype=np.float32)\n",
+    "    mag_diff = np.full(ang_diff.shape, np.nan, dtype=np.float32)\n",
+    "    for i, time in enumerate(overlap_times):\n",
+    "        vec_diff_dir = utils.get_dir(\"results/fs_comp_vectors\")\n",
+    "        fig = plt.figure()\n",
+    "        fig.patch.set_facecolor(\"w\")\n",
+    "        fig.set_size_inches(12, 5)\n",
+    "        fig.tight_layout()\n",
+    "        plot_vectorfield(files[0][\"ds\"], show_time=time, vmin=0, vmax=1, fig=fig, pos=121, titlestr=\"Thredds\")\n",
+    "        plot_vectorfield(files[1][\"ds\"], show_time=time, vmin=0, vmax=1, fig=fig, pos=122, titlestr=\"OI\")\n",
+    "        strtime = str(time.astype('datetime64[s]')).replace(\":\", \"-\")\n",
+    "        fig.savefig(vec_diff_dir / f\"field_comp_{strtime}.png\")\n",
+    "        plt.close(fig)\n",
+    "\n",
+    "        tidx0 = np.where(files[0][\"ds\"][\"time\"] == time)[0][0]\n",
+    "        tidx1 = np.where(files[1][\"ds\"][\"time\"] == time)[0][0]\n",
+    "\n",
+    "        u0 = files[0][\"ds\"][\"U\"].values[tidx0]\n",
+    "        v0 = files[0][\"ds\"][\"V\"].values[tidx0]\n",
+    "        u1 = files[1][\"ds\"][\"U\"].values[tidx1]\n",
+    "        v1 = files[1][\"ds\"][\"V\"].values[tidx1]\n",
+    "\n",
+    "        mag0 = np.sqrt(u0 ** 2 + v0 ** 2)\n",
+    "        mag1 = np.sqrt(u1 ** 2 + v1 ** 2)\n",
+    "        dot_mag_rat = (u0 * u1 + v0 * v1) / (mag0 * mag1)\n",
     "        # rounding errors cause arccos to go out of domain\n",
     "        dot_mag_rat[np.where(dot_mag_rat > 1)] = 1\n",
     "        dot_mag_rat[np.where(dot_mag_rat < -1)] = -1\n",
     "        ang = np.arccos(dot_mag_rat) * 180 / math.pi\n",
-    "        ang_diff[t] = ang\n",
-    "        mag_diff[t] = abs(mag - mag_other)"
+    "        ang_diff[i] = ang\n",
+    "        mag_diff[i] = abs(mag0 - mag1)"
    ]
   },
   {
