Some renaming of files

--- a/particle_density.ipynb
+++ b/particle_density.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset(\"results/simulation_tijuana_2022-09_alongshore_2022-10-12T14-11-39/particlefile.nc\")"
+    "ds = xr.open_dataset(\"results/simulation_tijuana_2022-09_alongshore_2022-10-21T14-51-36/particlefile.nc\")"
    ]
   },
   {
@@ -64,17 +64,11 @@
     "fig, ax = get_carree_axis(constants.TIJUANA_RIVER_DOMAIN, land=False)\n",
     "fig.patch.set_facecolor(\"w\")\n",
     "get_carree_gl(ax)\n",
-    "axhist = sns.histplot(x=lons, y=lats, bins=100, cbar=True, pmax=0.6, ax=ax)\n",
+    "axhist = sns.histplot(x=lons, y=lats, bins=100, cbar=True, pmax=0.65, ax=ax)\n",
     "coastline.add_to_plot(fig, ax, None, None, None)\n",
+    "ax.set_title(f\"Cumilative particle density from\\n{tstart.astype('datetime64[m]')} to {tend.astype('datetime64[m]')}\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
