--- a/simulation_runner.ipynb
+++ b/simulation_runner.ipynb
@@ -51,7 +51,7 @@
     "    # \"tijuana_2020-03_slipmask.json\",\n",
     "    # \"tijuana_2020-03_alongshore.json\",\n",
     "    \"tijuana_2022-09_alongshore.yaml\",\n",
-    "    \"tijuana_2022-09_oi_alongshore.yaml\"\n",
+    "    # \"tijuana_2022-09_oi_alongshore.yaml\"\n",
     "]"
    ]
   },
@@ -67,6 +67,15 @@
     "sims = []\n",
     "for cfg in loaded_configs:\n",
     "    sims.append(prep_sim_from_cfg(cfg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sims[0].kernels"
    ]
   },
   {
